# GearStocks

./: .env  .gitignore  .mergify.yml  CMakeLists.txt  README.md  caching-docker.yml  dev_apache.yml  dev_app.yml  dev_back.yml  dev_docker.yml  dev_front.yml  docker-compose.yml  gearstocks-dev-CI.yml  gearstocks-master-CI.yml  package-lock.json  package.json
.circleci/: config.yml
android-app/: .gitignore  Dockerfile  README.md
apache/: Dockerfile
apache/certificates/: .gitignore
apache/conf/: httpd-ssl-dev.conf  httpd-ssl.conf  httpd.conf
api_builder/: .gitignore  Dockerfile
application/: .eslintrc.js  .gitignore  App.js  Dockerfile  app.json  babel.config.js  https.py  package-lock.json  package.json
application/config/: address.js  color.js  colors.js  metrics.js  routes.js  strings.js
application/src/: App.js  AppNavigator.js  Main.js  main.js
application/src/config/: color.js
application/src/services/: FetchEmail.js
application/turtle/: https.py
back/: .gitignore  CMakeLists.txt  Dockerfile
back/Scrapper/: MyScrapper.py
back/include/: BddManager.hpp  Emailer.hpp  Server.hpp  TokenManager.hpp  aho_corasick.hpp
back/src/: BddManager.cpp  Dockerfile  Emailer.cpp  Main.cpp  README.md  Server.cpp  TokenManager.cpp  save.cpp
back/src/Scrapper/: MyScrapper.py  config.py
back/src/python/scripts/tools/Scrapper/Un/Chemin/Plus/Long/Pour/Faire/Plaisir/A/Valentin/Scrapper/: MyScrapper.py  config.py
certbot/: Dockerfile
database/: .gitignore
database/mongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3659486241248375527.wt  collection-0-4726188373859390484.wt  collection-2--3659486241248375527.wt  index-1--3659486241248375527.wt  index-1-4726188373859390484.wt  index-3--3659486241248375527.wt  index-6--3659486241248375527.wt  sizeStorer.wt
database/mongo/diagnostic.data/: metrics.2020-01-17T18-52-31Z-00000  metrics.2020-01-19T14-13-46Z-00000  metrics.2020-01-19T14-15-08Z-00000  metrics.2020-01-20T16-12-18Z-00000  metrics.2020-01-22T09-59-58Z-00000  metrics.2020-01-23T07-19-09Z-00000  metrics.2020-01-26T05-00-12Z-00000  metrics.2020-01-26T10-52-38Z-00000  metrics.2020-01-26T10-57-41Z-00000  metrics.2020-01-27T12-09-30Z-00000  metrics.2020-02-09T00-47-04Z-00000  metrics.2020-02-12T06-53-48Z-00000  metrics.2020-02-24T15-09-50Z-00000  metrics.2020-03-02T12-47-58Z-00000  metrics.2020-03-02T18-11-40Z-00000  metrics.2020-03-03T05-15-06Z-00000  metrics.2020-03-03T14-22-34Z-00000  metrics.2020-03-04T04-00-44Z-00000  metrics.2020-03-04T12-27-21Z-00000  metrics.2020-03-06T23-37-56Z-00000  metrics.2020-03-12T10-35-12Z-00000  metrics.2020-03-13T03-10-42Z-00000  metrics.2020-03-15T00-26-04Z-00000  metrics.2020-03-18T17-00-45Z-00000
front/: .gitignore  Dockerfile  README.md  angular.json  mock-server.7z  package-lock.json  package.json  proxy.js  tsconfig.json
front/e2e/src/: app.e2e-spec.ts
front/mock-server/: db.json  server.js
front/src/: index.html  karma.conf.js  styles.scss
front/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
front/src/environments/: environment.mock.ts  environment.prod.ts  environment.ts
images/: .gitignore
include/: TokenManager.hpp
mock-server/: server.js
src/: App.js  index.html  karma.conf.js  styles.scss
src/app/: app.module.ts
src/environments/: environment.prod.ts
(+203 files in other folders)
